src/chrome/komodo/skin/partials/scheme-skinning.p.less
@import url("chrome://komodo/skin/plat/shared/icons_depend.less");

.setVars() when (@dark = 1)
{
    @_background:           lighten(@background, 5%);
    @background-primary:    darken(@background, 2%);
    
    @foreground-focus:      lighten(@foreground, 20%);
    @background-contrast:   darken(@_background, 10%);
    @border:                lighten(@_background, 5%);
    @background-button:     lighten(desaturate(@_background, 5%), 5%);
    @background-button-hover:lighten(desaturate(@_background, 5%), 2%);
    @background-image-button:linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
    @background-input:      lighten(@background-contrast, 10%);
    @background-selected:   fade(desaturate(@special, 2%), 30%);
    
    @background-scrollbar:          @background;
    @background-scrollbar-thumb:    lighten(@background, 5%);
    @background-scrollbar-thumb-hover: lighten(@background, 10%);
    @background-scrollbar-hover:    darken(@background, 5%);
    
    @background-statusbar:      @background-primary;
    @border-statusbar:          lighten(@background, 5%);
}

.setVars() when (@dark = 0)
{
    @_background:           darken(@background, 5%);
    @background-primary:    darken(@background, 5%);
    
    @foreground-focus:      darken(@foreground, 10%);
    @background-contrast:   darken(@_background, 5%);
    @border:                darken(@_background, 10%);
    @background-button:     lighten(@_background, 10%);
    @background-button-hover:lighten(@_background, 15%);
    @background-input:      darken(@background-contrast, 10%);
    @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
    @background-image-button:linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
    @background-selected:   fade(desaturate(@special, 5%), 60%);
    
    @background-scrollbar:          @background;
    @background-scrollbar-thumb:    darken(@background, 12%);
    @background-scrollbar-thumb-hover: darken(@background, 20%);
    @background-scrollbar-hover:    darken(@background, 5%);
    
    @background-statusbar:      @background-primary;
    @border-statusbar:          darken(@background, 10%);
}

.setVars();

@foreground-selected:   contrast(@background-selected);
@special-fore: contrast(@special);

/* Hud */

.hud
{
    background: @background-primary !important;
    background-image: none !important;
    color: @foreground !important;
    border-color: @border !important;

    separator
    {
        -moz-appearance: none !important;
        height: 1px !important;
        max-height: 1px !important;
        background: fade(@border, 50%) !important;
    }

    .docked
    {
        background: fade(@border, 50%) !important;
    }

    .special
    {
        background: @special !important;
        color: @special-fore !important;
    }

    richlistitem,
    listitem,
    row
    {
        color: @foreground !important;
        border-color: fade(@border, 0%) !important;

        &[selected="true"]
        {
            color: @foreground-selected !important;
            background: @background-selected !important;
        }

        &[focused]:not([selected="true"])
        {
            color: @foreground-focus !important;
            border-color: @border !important;
        }
    }

    #commando-panel:not(.kitt) .loader
    {
        background-image: linear-gradient(to right, rgba(0,0,0,0.0) 0, @special 200px, @special 300px, rgba(0,0,0,0.0) 500px) !important;
    }

    ::-moz-selection {
        color: @special-fore !important;
        background: @special;
    }
    
    :not(button) > button:not(.button-plain)
    {
        background-color: @background-button !important;
        background-image: @background-image-button !important;
        border: 1px solid @border !important;

        &:hover
        {
            background-color: @background-button-hover !important;
        }
    }

    button:not(.button-plain)
    {
        color: @foreground !important;
    }
}

statusbar#statusbarviewbox,
.hud
{
    textbox:not(.transparent)
    {
        -moz-appearance: none !important;
        background: @background-input !important;
        border: 0;

        & > hbox
        {
            -moz-appearance: none !important;
            background-color: transparent !important;
        }
    }

    textbox
    {
        color: @foreground !important;
    }
}

scintilla[virtualScrollbars="true"] row > scrollbar,
.skinnedScrollbars
{
    border: 0;
    background: transparent;
    -moz-appearance: none !important;

    slider
    {
        -moz-appearance: none !important;
        border: 0;
        background: @background-scrollbar !important;
    }

    thumb
    {
        -moz-appearance: none !important;
        background: @background-scrollbar-thumb !important;
        border: 0;
    }

    thumb:hover
    {
        -moz-appearance: none !important;
        background: @background-scrollbar-thumb-hover !important;
    }
    
    scrollbarbutton
    {
        visibility: collapse;
    }
    
    &[orient="horizontal"] thumb
    {
        min-width: 25px;
    }

    &[orient="vertical"] thumb
    {
        min-height: 25px;
    }

    &:hover
    {
        slider
        {
            -moz-appearance: none;
            background: @background-scrollbar-hover !important;
        }
    }
    
    &[orient="vertical"]
    {
        width: 10px;
    }
    
    &[orient="horizontal"]
    {
        height: 10px;
    }
}

/* Do not skin non-editor scrollbars on OSX */
/* #if PLATFORM != "darwin" */
.hud scrollbar
{
    .skinnedScrollbars();
}
/* #endif */

/* Statusbar */

window:not([view-type="editor"])
{
    statusbar#statusbarviewbox
    {
        visibility: collapse;
    }
}

statusbar#statusbarviewbox
{
    -moz-appearance: none !important;
    background: @background-statusbar !important;
    background-image: none !important;
    color: fade(@foreground, 60%) !important;
    border: 0 !important;
    border-top: 1px solid @border-statusbar !important;

    statusbarpanel
    {
        -moz-appearance: none !important;
        background: transparent !important;
        border: 0 !important;
        padding: 0 2px 0 !important;
    }


    /* Statusbar Buttons */

    button:not([type="menu"]),
    sectionlist,
    toolbarbutton
    {
        -moz-appearance: none !important;
        background: transparent;
        color: fade(@foreground, 60%) !important;
        border: 0;
        border-radius: 0 !important;

        margin: 0;
        padding: 0 2px !important;

        & > label
        {
            color: fade(@foreground, 60%) !important;
        }

        &:hover
        {
            background: fade(darken(@_background, 5%), 40%) !important;
            
            &, & > label
            {
                color: lighten(@foreground, 10%) !important;
            }
        }
    }

    sectionlist textbox
    {
        -moz-appearance: none !important;
        background: lighten(@_background, 5%) !important;
        color: @foreground !important;
        border: 0 !important;
        
        & > hbox
        {
            -moz-appearance: none !important;
            background: transparent !important;
        }
    }

    .statusbar-resizerpanel
    {
        visibility: collapse;
    }

}

#quicklaunch
{
    border: 0;
    background-image: none !important;
}

statusbarpanel > toolbarbutton[type="menu"] > dropmarker
{
    opacity: 0.6;
    list-style-image: @icon-hud-dropmarker !important;
}

#statusbar-throbber-inner
{
    background: @special !important;
}

#breadcrumbBar .breadcrumb .breadcrumb-arrow
{
    background-image: @icon-hud-crumb-arrow !important;
}

#commando-search-quick[open]
{
    background: @background-primary !important;
    color: @foreground !important;
    
    &[placeholder="true"]
    {
        color: fade(@foreground, 50%) !important;
    }
}

minimap
{
    border-left: 1px solid @border !important;
}

